# Isolated_EC

./: README.md  keywords.txt  library.json  library.properties  verification.txt
docs/: 404.html  api.html  index.html
docs/assets/css/: 0.styles.5d32e21c.css  0.styles.85c55c11.css  0.styles.86182990.css
docs/assets/js/: 2.23e56aab.js  2.320b489d.js  2.4448bde9.js  3.02c4d5f7.js  3.054dd044.js  3.09bc2507.js  3.0c4268fb.js  3.4ad423ee.js  3.87f99200.js  3.bfe2aa63.js  4.1509c2d2.js  4.1a5e5c36.js  4.3a24e14a.js  (+30 more)
examples/01-Minimal/: 01-Minimal.ino
examples/02-Temperature/: 02-Temperature.ino
examples/03-CalibrationSinglePoint/: 03-CalibrationSinglePoint.ino
examples/04-CalibrationDualPoint/: 04-CalibrationDualPointCalibrationDualPoint.ino
examples/05-TemperatureCompensation/: 05-TemperatureCompensation.ino
examples/06-TemperatureCompensationAdvanced/: 06-TemperatureCompensationAdvanced.ino
examples/07-Shell/: 07-Shell.ino
examples/BLE/: BLE.ino
examples/Calibration/: Calibration.ino
examples/Minimal/: Minimal.ino
examples/OutsideTempSource/: OutsideTempSource.ino
examples/SAMD21/: SAMD21.ino
examples/Shell/: Shell.ino
examples/Temperature/: Temperature.ino
examples/TemperatureCompensation/: TemperatureCompensation.ino
python/MicroPython/: README.md  basic.py  shell.py  uFire_EC.py
python/RaspberryPi/: README.md  basic.py  shell.py  uFire_EC.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs  main.rs
src/: uFire_EC.cpp  uFire_EC.h  uFire_EC_BLE.cpp  uFire_EC_BLE.h  uFire_EC_JSON.cpp  uFire_EC_JSON.h  uFire_EC_MP.cpp  uFire_EC_MP.h
