[package]
name = "ufire_ec"
version = "0.9.2"
authors = ["Justin Decker <justind000@gmail.com>"]
readme = "README.md"
description = "Monitor hydroponic nutrient levels or salinity in aquariums, pools, and soil. Electrical Conductivity in Siemens, Total Dissolved Solids in PPM, Salinity in PSU and PPT, and temperature."
license = "MIT"
keywords = ["ec", "electrical", "conductivity", "sensor", "salinity"]

[lib]
name = "ufire_ec"
path = "src/lib.rs"

[[bin]]
name = "ufire_ec_bin"
path = "src/main.rs"

[dependencies]
i2cdev = "0.3.2"
byteorder = "1"
